
9.02  2021-02-17

9.01  2021-02-16
  - Added EXPERIMENTAL color attribute to Mojo::Log.
  - Added EXPERIMENTAL MOJO_LOG_COLOR environment variable to Mojo::Log.
  - Fixed Windows support of network_contains function in Mojo::Util. (jberger)

9.0  2021-02-14
  - Code name "Waffle", this is a major release.
  - Added support for deployment specific plugins.
  - Removed Mojo::IOLoop::Delay.
  - Removed hidden attribute from Mojolicious::Routes.
  - Removed hide and is_hidden methods from Mojolicious::Routes.
  - Removed deprecated success method from Mojo::Transaction.
  - Removed deprecated detour, over, route and via methods from Mojolicious::Routes::Route.
  - Removed deprecated local_address method from Mojo::UserAgent.
  - Removed deprecated tls_ciphers, tls_protocols, tls_verify and tls_version options from Mojo::IOLoop::TLS.
  - Removed deprecated local_address option from Mojo::IOLoop::Client.
  - Removed deprecated config stash value.
  - Changed Mojo::Log to join mutiple log messages with a whitespace instead of a newline.
  - Added is_reserved method to Mojolicious::Routes::Route.
  - Improved Mojolicious::Routes to disallow the use of reserved stash values, such as "/:action", in route patterns.
  - Improved Mojolicious::Routes to throw exceptions for missing controllers.
  - Improved Mojolicious::Routes to throw exceptions for routes with controllers but without action.
  - Improved Mojolicious::Routes to disallow namespace without controller for routing.
  - Improved Mojolicious::Routes to die if auto rendering failed.
  - Improved render method in Mojolicious::Controller to die if no response could be rendered.
  - Improved reply->static helper to die if the requested file does not exist.
  - Improved contextual logging feature in Mojo::Log not to concatenate log messages and context.
  - Improved all_text method in Mojo::DOM to exclude "<script>" and "<style>" from text extraction in HTML documents.